[gd_scene load_steps=5 format=2]

[ext_resource path="res://utility_nodes/HighscoreLayer.gd" type="Script" id=1]
[ext_resource path="res://hud/theme.tres" type="Theme" id=2]
[ext_resource path="res://hud/Cave-Story.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0.0823529, 0.054902, 0, 1 )
font_data = ExtResource( 3 )

[node name="HighscoreLayer" type="CanvasLayer"]
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )
script = ExtResource( 1 )

[node name="GetScore" type="HTTPRequest" parent="."]

[node name="Control" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -640.0
margin_bottom = -360.0
theme = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -142.0
margin_right = 130.0
margin_bottom = -118.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 255.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="Control/PanelContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.94902, 0.607843, 1 )
text = "Greatest Fishers of all Time:"
align = 1

[node name="Results" type="VBoxContainer" parent="Control/PanelContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 250.0
margin_bottom = 14.0
rect_min_size = Vector2( 250, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
margin_left = 5.0
margin_top = 5.0
margin_right = 325.0
margin_bottom = 25.0

[node name="Send" type="Button" parent="Control/HBoxContainer"]
margin_right = 69.0
margin_bottom = 21.0
text = "send highscore"

[node name="NamePanel" type="PanelContainer" parent="Control"]
margin_left = 5.0
margin_top = 5.0
margin_right = 163.0
margin_bottom = 55.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/NamePanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 153.0
margin_bottom = 104.0

[node name="Label" type="Label" parent="Control/NamePanel/VBoxContainer"]
margin_right = 148.0
margin_bottom = 13.0
text = "Your score:"

[node name="Score Label" type="Label" parent="Control/NamePanel/VBoxContainer"]
margin_top = 17.0
margin_right = 148.0
margin_bottom = 30.0
text = "5.000$"
align = 1

[node name="Label3" type="Label" parent="Control/NamePanel/VBoxContainer"]
margin_top = 34.0
margin_right = 148.0
margin_bottom = 47.0
text = "Enter your Name:"

[node name="Inputs" type="HBoxContainer" parent="Control/NamePanel/VBoxContainer"]
margin_top = 51.0
margin_right = 148.0
margin_bottom = 74.0

[node name="Name" type="LineEdit" parent="Control/NamePanel/VBoxContainer/Inputs"]
margin_right = 148.0
margin_bottom = 23.0
size_flags_horizontal = 3

[node name="Score" type="SpinBox" parent="Control/NamePanel/VBoxContainer/Inputs"]
visible = false
margin_left = 50.0
margin_right = 112.0
margin_bottom = 20.0
max_value = 1e+006
value = 6000.0
align = 2

[node name="Button" type="Button" parent="Control/NamePanel/VBoxContainer"]
margin_top = 78.0
margin_right = 148.0
margin_bottom = 99.0
text = "submit"

[node name="SendScore" type="HTTPRequest" parent="."]

[node name="Fill" type="Button" parent="."]
visible = false
margin_left = 100.0
margin_top = 288.5
margin_right = 112.0
margin_bottom = 308.5

[node name="Motion" type="Tween" parent="."]

[connection signal="request_completed" from="GetScore" to="." method="_on_GetScore_request_completed"]
[connection signal="pressed" from="Control/HBoxContainer/Send" to="." method="_on_Send_pressed"]
[connection signal="pressed" from="Control/NamePanel/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="SendScore" to="." method="_on_SendScore_request_completed"]
[connection signal="pressed" from="Fill" to="." method="_on_Fill_pressed"]
